配置文件修改

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-frontend",
+  "name": "myFrontend",
   "version": "1.0.0",
   "description": "A Mpvue project",
   "author": "rickyscoder <rickyzhz@foxmail.com>",
